register_final added

--- a/register_form_front.html
+++ b/register_form_front.html
@@ -21,8 +21,8 @@
 
 <label for="job">Login as:</label>
 <select id="job" name="field4">
-<option value=true>Teacher</option>
-    <option value=false>Student</option>
+<option value="true">Teacher</option>
+    <option value="false">Student</option>
 </select>  
 
 <label for="field5">Classroom ID:</label>
