--- a/register_form_front.html
+++ b/register_form_front.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="form-style-5">
-<form class="form-f" action="register.php" method="post">
+<form class="form-f" action="register_final.php" method="post">
 <fieldset>
 
 <legend><span class="number">1</span> Candidate Info</legend>
