--- a/newlogin.html
+++ b/newlogin.html
@@ -8,7 +8,7 @@
 <body>
 
 <div class="form-style-5">
-<form class="form-f" action="loginsql.php" method="POST">
+<form class="form-f" action="finalloginsql.php" method="POST">
 <fieldset>
 
 <legend>Login</legend>
