--- a/newlogin.html
+++ b/newlogin.html
@@ -11,16 +11,16 @@
 <form class="form-f" action="finalloginsql.php" method="POST">
 <fieldset>
 
-<legend>Login</legend>
+<legend>LOGIN</legend>
 
-<label for="field2">Email:</label>
-<input type="email" name="email" placeholder="Your Email *">
-<label for="field3">Classroom ID:</label>
-<input type="text" name="id" placeholder="Your ID *"><br>
+<label for="field2"></label>
+<input type="email" name="email" placeholder="Email">
+<label for="field3"></label>
+<input type="text" name="id" placeholder="Your ID"><br>
 
 
 </fieldset>
-<input type="submit" value="Login"/>
+<input type="submit" value="LOGIN"/>
 </form>
 </div>
 
