--- a/Website/index.html
+++ b/Website/index.html
@@ -11,7 +11,9 @@
   </head>
   <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg " style="background-color: #394989;">
+    
+    <header>
+      <nav class="navbar navbar-expand-lg " style="background-color: #394989;">
   <a class="navbar-brand" href="#"><img class="logo" src="img/logo.jpg" alt=""><span class="sr-only">(current)</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
@@ -36,6 +38,7 @@
     </span>
   </div>
 </nav>
+</header>
 <!-- main image -->
 <div class="container" style="margin-left: 80px; margin-right: 120px;">
   <img class="main-image" src="img/main.jpg" alt="">
