--- a/newlogin.html
+++ b/newlogin.html
@@ -22,6 +22,7 @@
 </fieldset>
 <input type="submit" value="LOGIN"/>
 </form>
+<h4>Not register? <a href="register_form_front.html">Click here</a></h4>
 </div>
 
 </body>
