--- a/LatestWebsite/index.html
+++ b/LatestWebsite/index.html
@@ -24,12 +24,12 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link" href="covid.html"><i class="fas fa-people-arrows fa-3x" style="color:#fddb3a;"></i></a>
+        <a class="nav-link" href="../front-page/covid.html"><i class="fas fa-people-arrows fa-3x" style="color:#fddb3a;"></i></a>
       </li>
 
 
         <li class="nav-item">
-          <a class="nav-link" href="newlogin.html">  <i class="far fa-user-circle fa-3x" style="color:#fddb3a;"></i></i></a>
+          <a class="nav-link" href="../newlogin.html">  <i class="far fa-user-circle fa-3x" style="color:#fddb3a;"></i></i></a>
         </li>
 
     </ul>
