Added code for encryption of password

--- a/register_form_front.html
+++ b/register_form_front.html
@@ -18,6 +18,8 @@
 <input type="email" name="field2" placeholder="Your Email *">
 <label for="field3">Phone No:</label>
 <input type="text" name="field3" placeholder="Phone No *">
+<label for="field6">Enter Password:</label>
+<input type="text" name="field6" placeholder="Password *">
 
 <label for="job">Login as:</label>
 <select id="job" name="field4">
