--- a/newlogin.html
+++ b/newlogin.html
@@ -17,6 +17,9 @@
 <input type="email" name="email" placeholder="Your Email *">
 <label for="field3">Classroom ID:</label>
 <input type="text" name="id" placeholder="Your ID *"><br>
+<label for="field6">Enter Password:</label>
+<input type="text" name="field6" placeholder="Password *">
+
 
 
 </fieldset>
