--- a/newlogin1.html
+++ b/newlogin1.html
@@ -21,6 +21,8 @@
 <input type="email" name="email" placeholder="Your Email *">
 <label for="field2">Classroom ID:</label>
 <input type="text" name="id" placeholder="Your ID *"><br>
+<label for="field6">Enter Password:</label>
+<input type="text" name="field6" placeholder="Password *">
 
 
 
